--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <h1><"Hello World"></h1>
 <p>paragraph</p>
 <ul>
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
-  <li>4</li>
+<li href="Words.html"><p> Words </p></li>
+<li href="Design.html"><p> Design </p></li>
+<li href="Drawings.html"><p> Drawings </p></li>
+<li href="Activities.html"><p> Activities </p></li>
 </ul>
+<script src="https://gist.github.com/ConnorSprague/87341a63d1159434f914.js"></script>
 </body>
 </html>
-</!>
