--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <h1><"Hello World"></h1>
 <p>paragraph</p>
 <ul>
-<li href="Words.html"><p> Words </p></li>
-<li href="Design.html"><p> Design </p></li>
-<li href="Drawings.html"><p> Drawings </p></li>
-<li href="Activities.html"><p> Activities </p></li>
+<li><a href="words.html">Words</a></li>
+<li><a href="design.html">Designs</a></li>
+<li><a href="drawings.html">Drawings</a></li>
+<li><a href="activities.html">Activities</a></li>
 </ul>
 <script src="https://gist.github.com/ConnorSprague/87341a63d1159434f914.js"></script>
 </body>
