--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1><"Hello World"></h1>
+<h1>Hello World</h1>
 <p>paragraph</p>
 <ul>
 <li><a href="words.html">Words</a></li>
