--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ Released   : 20140322
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -27,7 +28,7 @@ Released   : 20140322
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-        	<span class="icon icon-cog"></span>
+        	<i class="material-icons.md-48">face</i>
 			<h1><a href="#">Undeviating</a></h1>
 		</div>
 		<div id="menu">
@@ -101,7 +102,7 @@ Released   : 20140322
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
-		<span class="icon icon-map-marker"></span>
+		<i class="material-icons.md-36"></i>
 			<span>1234 Fictional Road Suite #789
 			<br />Nashville TN 00000</span>
 		</div>
