--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Released   : 20140322
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -28,7 +28,7 @@ Released   : 20140322
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-        	<i class="material-icons.md-48">face</i>
+        	<i class="material-icons md-48">face</i>
 			<h1><a href="#">Undeviating</a></h1>
 		</div>
 		<div id="menu">
