--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--
 Design by TEMPLATED
 http://templated.co
+Edited by Connor S.
 Released for free under the Creative Commons Attribution License
 
 Name       : Undeviating 
@@ -29,27 +30,29 @@ Released   : 20140322
 	<div id="header" class="container">
 		<div id="logo">
         	<i class="material-icons md-48">face</i>
-			<h1><a href="#">Undeviating</a></h1>
+			<h1><a href="#">Connor S.</a></h1>
 		</div>
 		<div id="menu">
 			<ul>
 				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+				<li><a href="#" accesskey="2" title="">Works</a></li>
+				<li><a href="#" accesskey="3" title="">Words</a></li>
+				<li><a href="#" accesskey="4" title="">Background</a></li>
+				<li><a href="#" accesskey="5" title="">Contact</a></li>
 			</ul>
 		</div>
 	</div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11408811/2d1b5e3a-9381-11e5-8a5c-9b57fb8c4c5d.jpg" width="1200" height="500" alt="" /></div>
+	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
 	<div id="welcome" class="container">
     	
 <div class="title">
-	  <h2>Welcome to our website</h2>
+	  <h2>Welcome to my website</h2>
 		</div>
-		<p>This is <strong>Undeviating</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+		<p>My name is <strong>Connor Sprague.</strong>
+		
+		</p>
 	</div>
 	<div id="three-column" class="container">
 		<div><span class="arrow-down"></span></div>
