--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20140322
 
+Icons:
+Google Icons
+https://www.iconfinder.com/marcosebald
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -17,7 +20,7 @@ Released   : 20140322
 <title></title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
@@ -29,7 +32,7 @@ Released   : 20140322
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-        	<i class="material-icons md-48">face</i>
+        	<i class="material-icons md-48 md-light">face</i>
 			<h1><a href="#">Connor S.</a></h1>
 		</div>
 		<div id="menu">
@@ -105,18 +108,17 @@ Released   : 20140322
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
-		<i class="material-icons.md-36"></i>
+		<i class="material-icons md-36 md-light">person pin</i>
 			<span>1234 Fictional Road Suite #789
 			<br />Nashville TN 00000</span>
 		</div>
 		<div class="fbox1">
-			<span class="icon icon-phone"></span>
-			<span>
+			<i class="material-icons md-light md-36">phone in talk</i>
 				Telephone: +1 800 123 4657
 			</span>
 		</div>
 		<div class="fbox1">
-			<span class="icon icon-envelope"></span>
+			<i class="material-icons md-light md-36">mail outline</i>
 			<span>businessname@business.com</span>
 		</div>
 	</div>
@@ -124,11 +126,9 @@ Released   : 20140322
 <div id="copyright">
 	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
+		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
+		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
+		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454230/bc3b8b9c-95ea-11e5-9298-4d977b311e1f.png"></img></a></li>
 	</ul>
 </div>
 </body>
