--- a/index.html
+++ b/index.html
@@ -108,18 +108,23 @@ https://www.iconfinder.com/marcosebald
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
-		<i class="material-icons md-36 md-light">person pin</i>
-			<span>1234 Fictional Road Suite #789
-			<br />Nashville TN 00000</span>
+		<ul>
+			</li><i class="material-icons md-36 md-light">person pin</i></li>
+			<li><p>1234 Fictional Road Suite #789</p></li>
+			<li><p>Nashville TN 00000</p></li>
+		</ul>
 		</div>
 		<div class="fbox1">
-			<i class="material-icons md-light md-36">phone in talk</i>
-				Telephone: +1 800 123 4657
-			</span>
+		<ul>
+			<li><i class="material-icons md-light md-36">phone in talk</i></li>
+			<li><p>Telephone: +1 800 123 4657</p></li>
+		</ul>
 		</div>
 		<div class="fbox1">
-			<i class="material-icons md-light md-36">mail outline</i>
-			<span>businessname@business.com</span>
+		<ul>
+			<li><i class="material-icons md-light md-36">mail outline</i></li>
+			<li><p>businessname@business.com</p></li>
+		</ul>
 		</div>
 	</div>
 </div>
