--- a/index.html
+++ b/index.html
@@ -109,21 +109,20 @@ https://www.iconfinder.com/marcosebald
 	<div class="container">
 		<div class="fbox1">
 		<ul>
-			</li><i class="material-icons md-36 md-light">person pin</i></li>
-			<li><p>1234 Fictional Road Suite #789</p></li>
-			<li><p>Nashville TN 00000</p></li>
+			<li><i class="material-icons md-36 md-light">person pin</i></li>
+			<li><a href="https://www.google.com/maps?ion=1&espv=2&q=rolla+mo&bav=on.2,or.r_cp.&biw=1366&bih=600&dpr=1&um=1&ie=UTF-8&sa=X&ved=0ahUKEwiMhNi1mrTJAhWIOj4KHSSfAncQ_AUIBigB">Rolla MO 65401</a></li>
 		</ul>
 		</div>
 		<div class="fbox1">
 		<ul>
 			<li><i class="material-icons md-light md-36">phone in talk</i></li>
-			<li><p>Telephone: +1 800 123 4657</p></li>
+			<li><p>Telephone: +1 417 315 2575</p></li>
 		</ul>
 		</div>
 		<div class="fbox1">
 		<ul>
 			<li><i class="material-icons md-light md-36">mail outline</i></li>
-			<li><p>businessname@business.com</p></li>
+			<li><a href="cms5y7@mst.edu">cms5y7@mst.edu</a></li>
 		</ul>
 		</div>
 	</div>
