--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ https://www.iconfinder.com/marcosebald
 		<div id="menu">
 			<ul>
 				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Works</a></li>
-				<li><a href="#" accesskey="3" title="">Words</a></li>
-				<li><a href="#" accesskey="4" title="">Background</a></li>
-				<li><a href="#" accesskey="5" title="">Contact</a></li>
+				<li><a href="works.html" accesskey="2" title="">Works</a></li>
+				<li><a href="words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="background.html" accesskey="4" title="">Background</a></li>
+				<li><a href="contact.html" accesskey="5" title="">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -53,9 +53,13 @@ https://www.iconfinder.com/marcosebald
 <div class="title">
 	  <h2>Welcome to my website</h2>
 		</div>
-		<p>My name is <strong>Connor Sprague.</strong>
+		<p>My name is <strong>Connor Sprague.</strong></p>
+		<p>This website is an opportunity for myself to showcase my talents, works, and ambitions in one easy to navigate source.</p>
+		<p></p>Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.
+		<p>Under the <strong>Words</strong> page you will find links to my published works as well as works in progress. You will also find examples of programs and scripts I have written.</p>
+		<p>Under the <strong>Background</strong> page you will find a short bio about myself.</p>
+		<p>Under the <strong>Contact</strong> page you will find resources for contacting me.</p>
 		
-		</p>
 	</div>
 	<div id="three-column" class="container">
 		<div><span class="arrow-down"></span></div>
