--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://www.iconfinder.com/marcosebald
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
+				<li class="active"><a href="index.html" accesskey="1" title="">Homepage</a></li>
 				<li class="active"><a href="works.html" accesskey="2" title="">Works</a></li>
 				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
 				<li class="active"><a href="background.html" accesskey="4" title="">Background</a></li>
