--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://www.iconfinder.com/marcosebald
 	<div id="header" class="container">
 		<div id="logo">
         	<i class="material-icons md-48 md-light">face</i>
-			<h1><a href="#">Connor S.</a></h1>
+			<h1><a href="https://www.facebook.com/connor.sprague.9">Connor S.</a></h1>
 		</div>
 		<div id="menu">
 			<ul>
