--- a/background.html
+++ b/background.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
 http://templated.co
 Edited by Connor S.
 Released for free under the Creative Commons Attribution License
@@ -30,15 +33,15 @@ https://www.iconfinder.com/marcosebald
 	<div id="header" class="container">
 		<div id="logo">
         	<i class="material-icons md-48 md-light">face</i>
-			<h1><a href="#">Connor S.</a></h1>
+			<h1><a href="https://www.facebook.com/connor.sprague.9">Connor S.</a></h1>
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="background.html" accesskey="4" title="">Background</a></li>
-				<li><a href="contact.html" accesskey="5" title="">Contact</a></li>
+				<li class="active"><a href="index.html" accesskey="1" title="">Homepage</a></li>
+				<li class="active"><a href="works.html" accesskey="2" title="">Works</a></li>
+				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
+				<li class="active"><a href="background.html" accesskey="4" title="">Background</a></li>
+				<li class="active"><a href="contact.html" accesskey="5" title="">Contact</a></li>
 			</ul>
 		</div>
 	</div>
