--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ https://www.iconfinder.com/marcosebald
 		<div id="menu">
 			<ul>
 				<li class="active"><a href="index.html" accesskey="1" title="">Homepage</a></li>
-				<li class="active"><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li class="active"><a href="background.html" accesskey="4" title="">Background</a></li>
-				<li class="active"><a href="contact.html" accesskey="5" title="">Contact</a></li>
+				<li><a href="works.html" accesskey="2" title="">Works</a></li>
+				<li><a href="words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="background.html" accesskey="4" title="">Background</a></li>
+				<li><a href="contact.html" accesskey="5" title="">Contact</a></li>
 			</ul>
 		</div>
 	</div>
