--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ https://www.iconfinder.com/marcosebald
 		<p>My name is <strong>Connor Sprague.</strong></p>
 		<p>This website is an opportunity for myself to showcase my talents, works, and ambitions in one easy to navigate source.</p>
 		<p></p>Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.
-		<p>Under the <strong>Words</strong> page you will find links to my published works as well as works in progress. You will also find examples of programs and scripts I have written.</p>
+		<p>Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
 		<p>Under the <strong>Background</strong> page you will find a short bio about myself.</p>
 		<p>Under the <strong>Contact</strong> page you will find resources for contacting me.</p>
 		
