--- a/works.html
+++ b/works.html
@@ -47,68 +47,31 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="500" alt="" /></div>
+	<div id="banner" class="container"><img src="http://www.the-blueprints.com/blueprints-depot/modernplanes/grumman/grumman-f-14-tomcat-9.png" width="1200" height="500" alt="" /></div>
 	<div id="welcome" class="container">
-    	
-<div class="title">
-	  <h2>Welcome to my website</h2>
-		</div>
-		<p>My name is <strong>Connor Sprague.</strong></p>
-		<p>This website is an opportunity for myself to showcase my talents, works, and ambitions in one easy to navigate source.</p>
-		<p></p>Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.
-		<p>Under the <strong>Words</strong> page you will find links to my published works as well as works in progress. You will also find examples of programs and scripts I have written.</p>
-		<p>Under the <strong>Background</strong> page you will find a short bio about myself.</p>
-		<p>Under the <strong>Contact</strong> page you will find resources for contacting me.</p>
-		
-	</div>
+
 	<div id="three-column" class="container">
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
 			<div class="title">
-				<h2>Maecenas luctus</h2>
+				<h2>Simply Solar</h2>
 			</div>
 			<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
-				<h2>Integer gravida</h2>
+				<h2>CuretteBlade</h2>
 			</div>
 			<p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2>Praesent mauris</h2>
+				<h2>Human Powered Vehicle</h2>
 			</div>
 			<p>Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem suscipit  eleifend.</p>
 			<a href="#" class="button">Learn More</a> </div>
 	</div>
-	<div id="portfolio" class="container">
-		<div class="column1">
-			<div class="box">
-			  <h3>Vestibulum venenatis</h3>
-				<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-		<div class="column2">
-			<div class="box">
-			  <h3>Praesent scelerisque</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-		<div class="column3">
-			<div class="box">
-			  <h3>Donec dictum metus</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-		<div class="column4">
-			<div class="box">
-			  <h3>Mauris vulputate dolor</h3>
-				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-	</div>
-</div>
+	
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
