--- a/words.html
+++ b/words.html
@@ -65,48 +65,44 @@ https://www.iconfinder.com/marcosebald
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
 			<div class="title">
-				<h2>Maecenas luctus</h2>
+				<h2>Published Works</h2>
 			</div>
-			<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>On this page you will find links to my published works as well as works in progress.</p>
+			<a href="pubworks.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
-				<h2>Integer gravida</h2>
+				<h2>Research</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>On this page you will find links to research work and assignments that were not published.</p>
+			<a href="research.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2>Praesent mauris</h2>
+				<h2>Matlab</h2>
 			</div>
-			<p>Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem suscipit  eleifend.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>On this page you will find projects and assignments I have completed using Matlab.</p>
+			<a href="matlab.html" class="button">Learn More</a> </div>
 	</div>
-	<div id="portfolio" class="container">
-		<div class="column1">
-			<div class="box">
-			  <h3>Vestibulum venenatis</h3>
-				<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-		<div class="column2">
-			<div class="box">
-			  <h3>Praesent scelerisque</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-		<div class="column3">
-			<div class="box">
-			  <h3>Donec dictum metus</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
-		<div class="column4">
-			<div class="box">
-			  <h3>Mauris vulputate dolor</h3>
-				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-		  <a href="#" class="button button-small">Etiam posuere</a> </div>
-		</div>
+	
+	<div id="three-column" class="container">
+		<div><span class="arrow-down"></span></div>
+		<div id="tbox1">
+			<div class="title">
+				<h2>C++</h2>
+			</div>
+			<p>On this page you will find projects and assignments I have completed using C++</p>
+			<a href="cplus.html" class="button">Learn More</a> </div>
+		<div id="tbox2">
+			<div class="title">
+				<h2>Web</h2>
+			</div>
+			<p>On this page you will find web related projects and pages I have designed and created.</p>
+			<a href="web.html" class="button">Learn More</a> </div>
+		<div id="tbox3">
+			<div class="title">
+				<h2>Android</h2>
+			</div>
+			<p>On this page you will find Android projects I have worked on.</p>
+			<a href="android.html" class="button">Learn More</a> </div>
 	</div>
 </div>
 <div id="footer">
