--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="http://www.the-blueprints.com/blueprints-depot/modernplanes/grumman/grumman-f-14-tomcat-9.png" width="1200" height="500" alt="" /></div>
+	<div id="banner" class="container"><img src="http://www.foro3d.com/attachments/122594d1265102895-blueprint-f-14-a-tomcat-f-14-a-tomcat-1.jpeg" width="1200" height="500" alt="" /></div>
 	<div id="welcome" class="container">
 
 	<div id="three-column" class="container">
