--- a/works.html
+++ b/works.html
@@ -56,20 +56,20 @@ https://www.iconfinder.com/marcosebald
 			<div class="title">
 				<h2>Simply Solar</h2>
 			</div>
-			<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>On this page documents, designs, and files related to an affordable, ecological, solar project I have been working can be found.</p>
+			<a href="simplysolar.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>CuretteBlade</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>On this page documents, designs, and files related to a professional medical project I led can be found.</p>
+			<a href="cb.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2>Human Powered Vehicle</h2>
 			</div>
-			<p>Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem suscipit  eleifend.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>On this page documents, designs, and files related to my part in the Human Powered Vehicle Design Team can be found.</p>
+			<a href="hpv.html" class="button">Learn More</a> </div>
 	</div>
 	
 <div id="footer">
@@ -95,7 +95,7 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>&copy; Untitled. All rights reserved. </p>
 	<ul class="contact">
 		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
 		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
