--- a/words.html
+++ b/words.html
@@ -40,7 +40,7 @@ https://www.iconfinder.com/marcosebald
 				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
 				<li><a href="works.html" accesskey="2" title="">Works</a></li>
 				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="">Contact</a></li>
+				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
 	</div>
@@ -117,9 +117,9 @@ https://www.iconfinder.com/marcosebald
 <div id="copyright">
 	<p>&copy; Untitled. All rights reserved. </p>
 	<ul class="contact">
-		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
-		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
-		<li><a href="#" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454230/bc3b8b9c-95ea-11e5-9298-4d977b311e1f.png"></img></a></li>
+		<li><a href="https://www.facebook.com/connor.sprague.9" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454209/65343c90-95ea-11e5-80a7-b87bc5e321ab.png"></img></a></li>
+		<li><a href="https://www.linkedin.com/in/connor-sprague-30141b72" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454224/a51327d6-95ea-11e5-9d7a-7dd9b3195073.png"></img></a></li>
+		<li><a href="https://www.youtube.com/channel/UCjOXZoLIOcxtw0W5wEbLHeg" class="icon"><img src="https://cloud.githubusercontent.com/assets/16012579/11454230/bc3b8b9c-95ea-11e5-9298-4d977b311e1f.png"></img></a></li>
 	</ul>
 </div>
 </body>
