--- a/works.html
+++ b/works.html
@@ -40,7 +40,7 @@ https://www.iconfinder.com/marcosebald
 				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
 				<li class="active"><a href="works.html" accesskey="2" title="">Works</a></li>
 				<li><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="">Contact</a></li>
+				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
 	</div>
@@ -53,19 +53,19 @@ https://www.iconfinder.com/marcosebald
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
 			<div class="title">
-				<h2>Simply Solar</h2>
+				<h2><a href="simplysolar.html>Simply Solar</a></h2>
 			</div>
 			<p>On this page documents, designs, and files related to an affordable, ecological, solar project I have been working can be found.</p>
 			<a href="simplysolar.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
-				<h2>CuretteBlade</h2>
+				<h2><a href="cb.html>CuretteBlade</a></h2>
 			</div>
 			<p>On this page documents, designs, and files related to a professional medical project I led can be found.</p>
 			<a href="cb.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2>Human Powered Vehicle</h2>
+				<h2><a href="hpv.html>Human Powered Vehicle</a></h2>
 			</div>
 			<p>On this page documents, designs, and files related to my part in the Human Powered Vehicle Design Team can be found.</p>
 			<a href="hpv.html" class="button">Learn More</a> </div>
