--- a/works.html
+++ b/works.html
@@ -53,19 +53,19 @@ https://www.iconfinder.com/marcosebald
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
 			<div class="title">
-				<h2><a href="simplysolar.html>Simply Solar</a></h2>
+				<h2 href="simplysolar.html>Simply Solar</h2>
 			</div>
 			<p>On this page documents, designs, and files related to an affordable, ecological, solar project I have been working can be found.</p>
 			<a href="simplysolar.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
-				<h2><a href="cb.html>CuretteBlade</a></h2>
+				<h2 href="cb.html>CuretteBlade</h2>
 			</div>
 			<p>On this page documents, designs, and files related to a professional medical project I led can be found.</p>
 			<a href="cb.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2><a href="hpv.html>Human Powered Vehicle</a></h2>
+				<h2 href="hpv.html">Human Powered Vehicle</h2>
 			</div>
 			<p>On this page documents, designs, and files related to my part in the Human Powered Vehicle Design Team can be found.</p>
 			<a href="hpv.html" class="button">Learn More</a> </div>
