--- a/works.html
+++ b/works.html
@@ -45,9 +45,9 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
-<div class="wrapper">
-	<div id="banner" class="container"><img src="http://www.foro3d.com/attachments/122594d1265102895-blueprint-f-14-a-tomcat-f-14-a-tomcat-1.jpeg" width="1200" height="500" alt="" /></div>
 
+<div id="banner" class="container"><img src="http://www.foro3d.com/attachments/122594d1265102895-blueprint-f-14-a-tomcat-f-14-a-tomcat-1.jpeg" width="1200" height="500" alt="" /></div>
+<div class="wrapper">
 	<div id="three-column" class="container">
 		<div><span class="arrow-down"></span></div>
 		<div id="tbox1">
@@ -55,19 +55,22 @@ https://www.iconfinder.com/marcosebald
 				<h2 href="simplysolar.html>Simply Solar</h2>
 			</div>
 			<p>On this page documents, designs, and files related to an affordable, ecological, solar project I have been working can be found.</p>
-			<a href="simplysolar.html" class="button">Learn More</a> </div>
+			<a href="simplysolar.html" class="button">Learn More</a>
+		</div>
 		<div id="tbox2">
 			<div class="title">
 				<h2 href="cb.html>CuretteBlade</h2>
 			</div>
 			<p>On this page documents, designs, and files related to a professional medical project I led can be found.</p>
-			<a href="cb.html" class="button">Learn More</a> </div>
+			<a href="cb.html" class="button">Learn More</a>
+		</div>
 		<div id="tbox3">
 			<div class="title">
 				<h2 href="hpv.html">Human Powered Vehicle</h2>
 			</div>
 			<p>On this page documents, designs, and files related to my part in the Human Powered Vehicle Design Team can be found.</p>
-			<a href="hpv.html" class="button">Learn More</a> </div>
+			<a href="hpv.html" class="button">Learn More</a> 
+		</div>
 	</div>
 </div>	
 <div id="footer">
