--- a/words.html
+++ b/words.html
@@ -45,7 +45,7 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
-	<div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="1200" height="300" alt="" /></div>
+	<div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 
  <div class="wrapper" id="wrapper1">
 	<div id="three-column" class="container">
