--- a/contact.html
+++ b/contact.html
@@ -46,25 +46,25 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://www.explainxkcd.com/wiki/images/a/ae/location_sharing.png" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="https://www.explainxkcd.com/wiki/images/a/ae/location_sharing.png" width="1200" height="500" alt="" /></div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="http://41.media.tumblr.com/205ac03e1c1201d84c4fd1121a030df2/tumblr_mqs9eeV23G1sccdh7o1_500.png" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="http://41.media.tumblr.com/205ac03e1c1201d84c4fd1121a030df2/tumblr_mqs9eeV23G1sccdh7o1_500.png" width="1200" height="500" alt="" /></div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568396/603b1298-99b1-11e5-9cb4-fa50a1caf9c0.jpg" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568396/603b1298-99b1-11e5-9cb4-fa50a1caf9c0.jpg" width="1200" height="500" alt="" /></div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568412/712ba798-99b1-11e5-8aaf-7540850e7413.jpg" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568412/712ba798-99b1-11e5-8aaf-7540850e7413.jpg" width="1200" height="500" alt="" /></div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568712/57b6f04a-99b3-11e5-8c9b-579c8e68cd85.jpg" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568712/57b6f04a-99b3-11e5-8c9b-579c8e68cd85.jpg" width="1200" height="500" alt="" /></div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568728/6d58bda2-99b3-11e5-9085-9737430322b4.jpg" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568728/6d58bda2-99b3-11e5-9085-9737430322b4.jpg" width="1200" height="500" alt="" /></div>
 </div>
 <div class="wrapper">
-	<div id="banner" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568721/67f214c6-99b3-11e5-87d7-f0c2e802720b.png" width="1200" height="500" alt="" /></div>
+	<div id="#" class="container"><img src="https://cloud.githubusercontent.com/assets/16012579/11568721/67f214c6-99b3-11e5-87d7-f0c2e802720b.png" width="1200" height="500" alt="" /></div>
 </div>
 <div id="footer">
 	<div class="container">
