--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@ https://www.iconfinder.com/marcosebald
 <div class="title">
 	  <h2>Welcome to my website</h2>
 		</div>
-		<p>My name is <strong>Connor Sprague.</strong></p>
-		<p>This website is an opportunity for myself to showcase my talents, works, and ambitions in one easy to navigate source.</p>
+		<p><strong>Hi</strong>, my name is <strong>Connor Sprague.</strong></p>
+		<p>This website is an opportunity for myself to showcase my talents, works, ramblings, and ambitions in one easy to navigate source.</p>
 		<p></p>Under the <strong>Works</strong> page you will find models and designs I have done in the past, as well as projects that are currently in progress.
 		<p>Under the <strong>Words</strong> page you will find links to my published works. You will also find examples of programs and scripts I have written.</p>
-		<p>Under the <strong>Background</strong> page you will find a short bio about myself.</p>
-		<p>Under the <strong>Contact</strong> page you will find resources for contacting me.</p>
+		<p>The <strong>Waterfall</strong> page is a place for the deluge of works or content I find amusing.</p>
 		
 	</div>
 	<div id="banner" class="container"><img src="https://daguchi.files.wordpress.com/2015/01/lego-print-ad.jpg" width="1200" height="350" alt="" /></div>
