--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ https://www.iconfinder.com/marcosebald
 		<div class="fbox1">
 		<ul>
 			<li><i class="material-icons md-light md-36">mail outline</i></li>
-			li><a href="mailto:cms5y7@mst.edu?subject=PersonalWebpage">Email Me</a> </li>
+			<li><a href="mailto:cms5y7@mst.edu?subject=PersonalWebpage">Email Me</a> </li>
 		</ul>
 		</div>
 	</div>
