--- a/words.html
+++ b/words.html
@@ -52,21 +52,21 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox1">
 			<div class="title">
 				<h2>Published Works</h2>
-				<a href="#"><img src="#" class="column-image"></a>
+				<a href="pubworks.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find links to my published works as well as works in progress.</p>
 			<a href="pubworks.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>Research</h2>
-				<a href="#"><img src="#" class="column-image"></a>
+				<a href="research.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find links to research work and assignments that were not published.</p>
 			<a href="research.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2>Matlab</h2>
-				<a href="#"><img src="#" class="column-image"></a>
+				<a href="matlab.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find projects and assignments I have completed using Matlab.</p>
 			<a href="matlab.html" class="button">Learn More</a> </div>
@@ -77,21 +77,21 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox1">
 			<div class="title">
 				<h2>C++</h2>
-				<a href="#"><img src="#" class="column-image"></a>
+				<a href="cplus.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find projects and assignments I have completed using C++</p>
 			<a href="cplus.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>Web</h2>
-				<a href="#"><img src="#" class="column-image"></a>
+				<a href="web.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find web related projects and pages I have designed and created.</p>
 			<a href="web.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2>Android</h2>
-				<a href="#"><img src="#" class="column-image"></a>
+				<a href="android.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find Android projects I have worked on and been a part of.</p>
 			<a href="android.html" class="button">Learn More</a> </div>
