--- a/words.html
+++ b/words.html
@@ -84,10 +84,10 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox2">
 			<div class="title">
 				<h2>Web</h2>
-				<a href="https://connorsprague.github.io/web.html"><img src="#" class="column-image"></a>
+				<a href="/words/web.html"><img src="#" class="column-image"></a>
 			</div>
 			<p>On this page you will find web related projects and pages I have designed and created.</p>
-			<a href="https://connorsprague.github.io/web.html" class="button">Learn More</a> </div>
+			<a href="words/web.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2>Android</h2>
