--- a/words/web.html
+++ b/words/web.html
@@ -1,4 +1,24 @@
+<style type="text/css">
 
+.two_column_container1{
+	color: #85BDDE;
+}
+.two_column_container2{
+	color: #DAE0E6;
+}
+.container_left{
+	width:40%;
+	height:25%;
+	margin: 5%;
+	float:left;
+}
+.container_right{
+	width:40%;
+	height:25%;
+	margin 5%;
+	float:right;
+}
+</style>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
 Design by TEMPLATED
@@ -47,11 +67,23 @@ https://www.iconfinder.com/marcosebald
 	
  <div class="wrapper" id="wrapper1">
 	
-	<div>
-	  <script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
-	  
+	<div class="two_column_container1">
+		<div class="container_left">
+	  	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+	  	</div>
+	  	<div class="container_right">
+	   <script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
+	  	</div>
 	</div>
 	
+	<div class="two_column_container1">
+		<div class="container_left">
+	  	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+	  	</div>
+	  	<div class="container_right">
+	   	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
+	  	</div>
+	</div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
 	<div class="container">
