--- a/words/web.html
+++ b/words/web.html
@@ -8,13 +8,13 @@
 }
 .container_left{
 	width:40%;
-	height:25%;
+	height:500px;
 	margin: 5%;
 	float:left;
 }
 .container_right{
 	width:40%;
-	height:25%;
+	height:500px;
 	margin: 5%;
 	float:right;
 }
