--- a/words/web.html
+++ b/words/web.html
@@ -84,6 +84,7 @@ https://www.iconfinder.com/marcosebald
 	   	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
 	  	</div>
 	</div>
+</div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
 	<div class="container">
