--- a/words/web.html
+++ b/words/web.html
@@ -8,14 +8,14 @@
 }
 .container_left{
 	width:40%;
-	height:500px;
-	margin: 5%;
+	height:300px;
+	padding: 5%;
 	float:left;
 }
 .container_right{
 	width:40%;
-	height:500px;
-	margin: 5%;
+	height:300px;
+	padding: 5%;
 	float:right;
 }
 </style>
@@ -56,10 +56,10 @@ https://www.iconfinder.com/marcosebald
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
-				<li><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li class="active"><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
+				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
+				<li><a href="../works.html" accesskey="2" title="">Works</a></li>
+				<li class="active"><a href="../words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
 	</div>
