--- a/words/web.html
+++ b/words/web.html
@@ -47,14 +47,18 @@ https://www.iconfinder.com/marcosebald
 	
  <div class="wrapper" id="wrapper1">
 	
-
+		<div>
+			<h1>Heading 1</h1>
+		</div>
 		<div class="container_left">
 	  	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
 	  	</div>
 	  	<div class="container_right">
 	   <script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
 	  	</div>
-
+		<div>
+			<h1>Heading 1</h1>
+		</div>
 	
 
 		<div class="container_left">
