--- a/words/web.html
+++ b/words/web.html
@@ -56,7 +56,7 @@ https://www.iconfinder.com/marcosebald
 	  	<div class="container_right">
 	   <script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
 	  	</div>
-		<div>
+		<div style="width:100%">
 			<h1>Heading 1</h1>
 		</div>
 	
