--- a/words/web.html
+++ b/words/web.html
@@ -46,28 +46,22 @@ https://www.iconfinder.com/marcosebald
 </div>
 	
  <div class="wrapper" id="wrapper1">
-	
-		<div>
-			<h1>Heading 1</h1>
-		</div>
+	<div class="two_column_container1">
 		<div class="container_left">
-	  	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
-	  	</div>
-	  	<div class="container_right">
-	   <script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
-	  	</div>
-		<div style="width:100%">
-			<h1>Heading 1</h1>
+			<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
 		</div>
-	
-
+		<div class="container_right">
+			<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+		</div>	
+	</div>
+	<div class="two_column_container1">
 		<div class="container_left">
-	  	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
-	  	</div>
-	  	<div class="container_right">
-	   	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>		
-	  	</div>
-
+			<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+		</div>
+		<div class="container_right">
+			<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+		</div>	
+	</div>
 </div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
