--- a/words/web.html
+++ b/words/web.html
@@ -48,13 +48,13 @@ https://www.iconfinder.com/marcosebald
 	<h1>Header1</h1>
 </div>	
  <div class="wrapper" id="wrapper2">
-	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+	<embed src="../index.html"
 </div>
 <div>
 	<h1>Header2</h1>
 </div>
  <div class="wrapper" id="wrapper2">
-	<script src="https://gist.github.com/ConnorSprague/5005e79c50afa8dae5f3.js"></script>
+	<embed src="../index.html"
 </div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
