--- a/words/web.html
+++ b/words/web.html
@@ -47,12 +47,14 @@ https://www.iconfinder.com/marcosebald
 
  <div class="wrapper" id="wrapper2">
  	<h1>Header1</h1>
-	<embed src="../index.html"
+	<embed class="container_left" src="../index.html"
+	<embed class="container_right" src="../index.html"
 </div>
 
  <div class="wrapper" id="wrapper2">
  	<h1>Header2</h1>
-	<embed src="../index.html"
+	<embed class="container_left" src="../index.html"
+	<embed class="container_right" src="../index.html"
 </div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
