--- a/words/web.html
+++ b/words/web.html
@@ -46,16 +46,12 @@ https://www.iconfinder.com/marcosebald
 </div>
 
  <div class="wrapper" id="wrapper2">
- 	<h1>Header1</h1>
+ 	<h1>Page</h1>
 	<embed class="embedded" src="../index.html">
 </div>
 
  <div class="wrapper" id="wrapper2">
- 	<h1>Header2</h1>
-	<embed class="embedded" src="../index.html">
-</div>
- <div class="wrapper" id="wrapper2">
- 	<h1>Header3</h1>
+ 	<h1>Page Code</h1>
 	<script src="https://gist.github.com/ConnorSprague/f0b5fc6f4110f128c79f.js"></script>
 </div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
