--- a/words/web.html
+++ b/words/web.html
@@ -44,13 +44,10 @@ https://www.iconfinder.com/marcosebald
 		</div>
 	</div>
 </div>
-
- <div class="wrapper" id="wrapper2">
+<div id="wrapper1">
  	<h1>Page</h1>
 	<embed class="embedded" src="../index.html">
-</div>
 
- <div class="wrapper" id="wrapper2">
  	<h1>Page Code</h1>
 	<script src="https://gist.github.com/ConnorSprague/f0b5fc6f4110f128c79f.js"></script>
 </div>
