--- a/words/web.html
+++ b/words/web.html
@@ -46,10 +46,13 @@ https://www.iconfinder.com/marcosebald
 </div>
 <div id="wrapper1">
  	<h1>Page</h1>
-	<embed class="embedded" src="../index.html">
+	<embed class="embedded" src="web/h4hindex.html">
 
  	<h1>Page Code</h1>
-	<script src="https://gist.github.com/ConnorSprague/f0b5fc6f4110f128c79f.js"></script>
+	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
+</div>
+<div>
+	
 </div>
 <div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
