--- a/words/web.html
+++ b/words/web.html
@@ -17,6 +17,7 @@ https://www.iconfinder.com/marcosebald
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<meta name="viewport" content="width=device-width">
 <title>web dev examples</title>
 <meta name="keywords" content="Web Development" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
