--- a/words/web.html
+++ b/words/web.html
@@ -50,10 +50,15 @@ https://www.iconfinder.com/marcosebald
   <!-- The container is used to define the width of the slideshow -->
   <div class="container">
     <div id="slides">
-      <img src="img/example-slide-1.jpg" alt="Photo by: Missy S Link: https://www.flickr.com/photos/listenmissy/5087404401/">
-      <img src="img/example-slide-2.jpg" alt="Photo by: Daniel Parks Link: https://www.flickr.com/photos/parksdh/5227623068/">
-      <img src="img/example-slide-3.jpg" alt="Photo by: Mike Ranweiler Link: https://www.flickr.com/photos/27874907@N04/4833059991/">
-      <img src="img/example-slide-4.jpg" alt="Photo by: Stuart SeegerLink: https://www.flickr.com/photos/stuseeger/97577796/">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764951/8f71c820-a10b-11e5-9c36-9b8f5819783a.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764955/a49c7664-a10b-11e5-80c6-4c1c9ee55ec5.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764957/be40451e-a10b-11e5-9fed-df3b0a956fa2.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764960/d8135cc4-a10b-11e5-9e68-6c2d3c8032d2.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764961/e833ffe6-a10b-11e5-983c-22ab4f225c4d.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764962/fe48d5b8-a10b-11e5-9e10-7986c6c5f530.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764964/14f456f2-a10c-11e5-948a-7aa90969332d.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764965/24f0de90-a10c-11e5-9438-e2aadca9959e.PNG" alt="#">
+      <img src="https://cloud.githubusercontent.com/assets/16012579/11764966/3642363a-a10c-11e5-8964-f6a59548365d.PNG" alt="#">
       <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
       <a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
     </div>
