--- a/words/web.html
+++ b/words/web.html
@@ -59,8 +59,9 @@ https://www.iconfinder.com/marcosebald
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764964/14f456f2-a10c-11e5-948a-7aa90969332d.PNG" alt="#">
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764965/24f0de90-a10c-11e5-9438-e2aadca9959e.PNG" alt="#">
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764966/3642363a-a10c-11e5-8964-f6a59548365d.PNG" alt="#">
-      <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
-      <a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
+      <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard arrow left</i></a>
+      <a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard arrow right</i></a>
+      
     </div>
   </div>
 
