--- a/contact.html
+++ b/contact.html
@@ -38,8 +38,8 @@ https://www.iconfinder.com/marcosebald
 		<div id="menu">
 			<ul>
 				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
-				<li><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li><a href="words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="works/works.html" accesskey="2" title="">Works</a></li>
+				<li><a href="words/words.html" accesskey="3" title="">Words</a></li>
 				<li><a href="contact.html" accesskey="4" title="" class="active">Waterfall</a></li>
 			</ul>
 		</div>
