--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -52,10 +52,10 @@ https://www.iconfinder.com/marcosebald
 		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
 	</div>
 	<div id="banner" class="container">
-		<img class="#" src="#">
-		<img class="#" src="#">
-		<img class="#" src="#">
-		<img class="#" src="#">
+		<img class="image-left" src="#">
+		<img class="image-right" src="#">
+		<img class="image-left" src="#">
+		<img class="image-right" src="#">
 	</div>
 </div>
 <div id="footer">
