--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -15,14 +15,15 @@ https://www.iconfinder.com/marcosebald
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<meta name="description" content="Web development examples. Uses SlidesJS, a simple slideshow plugin for jQuery.">
+<meta name="viewport" content="width=device-width">
+<title>web dev examples</title>
+<meta name="keywords" content="Web Development" />
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="../fonts.css" rel="stylesheet" type="text/css" media="all" />
-
+<link rel="stylesheet" href="font-awesome.min.css">
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
@@ -52,10 +53,19 @@ https://www.iconfinder.com/marcosebald
 		<p>Accompanied by a sustainable design, Simply Solar aims to put simple solar technology in the hands of traditionally overlooked markets. The aim is to develop the technology to a point that allows it to be obtained and utilized in third world countries, providing a reliable source of energy.</p>
 	</div>
 	<div id="banner" class="container">
-		<img class="image-left" src="#">
-		<img class="image-right" src="#">
-		<img class="image-left" src="#">
-		<img class="image-right" src="#">
+    		<div id="slides">
+		 <img src="https://cloud.githubusercontent.com/assets/16012579/11764951/8f71c820-a10b-11e5-9c36-9b8f5819783a.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764955/a49c7664-a10b-11e5-80c6-4c1c9ee55ec5.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764957/be40451e-a10b-11e5-9fed-df3b0a956fa2.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764960/d8135cc4-a10b-11e5-9e68-6c2d3c8032d2.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764961/e833ffe6-a10b-11e5-983c-22ab4f225c4d.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764962/fe48d5b8-a10b-11e5-9e10-7986c6c5f530.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764964/14f456f2-a10c-11e5-948a-7aa90969332d.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764965/24f0de90-a10c-11e5-9438-e2aadca9959e.PNG" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764966/3642363a-a10c-11e5-8964-f6a59548365d.PNG" alt="#">
+      		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
+    	</div>
 	</div>
 </div>
 <div id="footer">
