--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -73,7 +73,7 @@ https://www.iconfinder.com/marcosebald
   <!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Link to jquery.slides.js -->
-  <script src=".../web/jquery.slides.min.js"></script>
+  <script src=".../words/jquery.slides.min.js"></script>
   <!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
