--- a/works/cb.html
+++ b/works/cb.html
@@ -48,6 +48,8 @@ https://www.iconfinder.com/marcosebald
 <div class="wrapper">
 	<div id="banner" class="container">
 		<h1>S+A Technologies Dermal Curette</h1>
+	</div>
+	<div id="banner" class="container">
 		<p><b>S+A Technologies</b> is a small company based out of Rolla Missouri focused on medical innovations ranging from medical apparatus to telemedicine.</p>
 		<p><b>One such medical device is the S+A Technologies Dermal Curette.</b></p>
 		<p>Much like the dichotomy between reusable shaving razors and plastic disposable razors, S+A Dermal Curettes aim to combine the professional precision feel of tradiotion Dermal Curettes with the affordability and low maintenance of disposable curettes.</p>
